k8s_advance/ingress/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-routing
  namespace: kube-system
spec:
  rules:
    - host: kibana.vehicle.technoavengers.click
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kibana-logging
                port:
                 number: 5601
