k8s_advance/ingress/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-routing
spec:
  rules:
    - host: technoavengers.com
      http:
        paths:
          - path: /
            backend:
              service: 
                name: fleetman-webapp
                port:
                 number: 80
